fix: stabilize tab bar on mobile scroll

--- a/frontend/src/app/creator/creator.page.scss
+++ b/frontend/src/app/creator/creator.page.scss
@@ -259,7 +259,7 @@ ion-content {
 }
 
 .spacer { 
-  height: 50px; 
+  height: 120px; 
 }
 
 @media (min-width: 1024px) {
